--- a/laravel8crudapplication/public/assets/style.css
+++ b/laravel8crudapplication/public/assets/style.css
@@ -272,7 +272,7 @@ h4{
     width: 100%;
     align-items: center;
     margin-top: 5px;
-    margin-left: 50%;
+    margin-right: 10%;
     height: 5px;
     border-radius: 25px;
    
